--- a/package.json
+++ b/package.json
@@ -9,17 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prismicio/client": "^5.1.0",
+    "@stripe/stripe-js": "^1.17.1",
+    "axios": "^0.21.1",
     "faunadb": "^4.4.0",
     "next": "11.1.0",
     "next-auth": "^3.29.0",
+    "prismic-dom": "^2.2.6",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
+    "react-toastify": "^8.0.2",
     "sass": "^1.38.2",
     "stripe": "^8.171.0"
   },
   "devDependencies": {
     "@types/node": "^16.7.6",
+    "@types/prismic-dom": "^2.1.1",
     "@types/react": "^17.0.19",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.0",
